added health checks, docker file, and K8s deployment
